# hopdot

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
android/: settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: dummy.cpp
android/app/src/main/java/xyz/lcdev/hopdot/: MainActivity.java
android/gradle/: libs.versions.toml
assets/models/: back.glb  continue-game.glb  hopdot.glb  rules.glb  settings.glb  start-game.glb  table.glb
client/: Cargo.toml
client/assets/fonts/: README.md
client/assets/models/: back-button.glb  back.glb  continue-game.glb  credits.glb  exit-to-main-menu.glb  gamepaused.glb  hopdot.glb  main-menu.glb  rules.glb  settings.glb  start-game.glb  table.glb
client/assets/sound/: bump.flac
client/src/: ai.rs  anim.rs  bundle_fn.rs  lib.rs  main.rs  menu.rs  net.rs  observe.rs  projection.rs  ui_menu.rs
client/src/ui_menu/: credits.rs  custom_game_setup.rs  game_end.rs  game_hud.rs  host_game.rs  join_game.rs  rules.rs  settings.rs  support.rs
common/: Cargo.toml
common/src/: ai.rs  game_manager.rs  grid.rs  lib.rs  pgn.rs  proto.rs  version.rs
old-server/src/: session.rs
old-server/src/db/: model.rs
old-server/src/handlers/: game.rs  lobby.rs
old-server/src/handlers/game/: remote.rs
server/: Cargo.toml
server/src/: app_config.rs  db.rs  game.rs  handlers.rs  lobby.rs  main.rs  session.rs
server/src/handlers/: game.rs  lobby.rs  sessions.rs  users.rs
server/src/handlers/game/: remote.rs
src/: ai.rs  anim.rs  main.rs
wasm/: index.html
