[workspace]
members = ["client", "common", "server"]
default-members = ["client", "server"]
resolver = "3"

[workspace.package]
version = "1.2.3"
edition = "2024"
authors = ["Ray Redondo (rdredondo@lcdev.xyz)"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }
common = { path = "common" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.41"
uuid = { version = "1.17.0", features = ["serde"] }
rand = "0.9.1"
bevy = { version = "0.16.1", default-features = false }
bevy_defer = "0.14.0"

[patch.crates-io]
getrandom = { git = "https://github.com/benfrankel/getrandom" }

[profile.dev]
opt-level = 1
debug = "full"

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.common]
opt-level = 1

[profile.dev.package.hopdot]
opt-level = 1

[profile.dev.package.hopdot-server]
opt-level = 1

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"

[profile.relwithdebinfo]
inherits = "release"
debug = true

[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
