[workspace]
members = ["client", "common"]
default-members = ["client"]
resolver = "3"

[workspace.package]
version = "1.3.0"
edition = "2024"
authors = ["Ray Redondo (rdredondo@lcdev.xyz)"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }
common = { path = "common" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.41"
uuid = { version = "1.17.0", features = ["serde"] }
rand = "0.9.2"
bevy = { version = "0.17.1", default-features = false }
bevy_defer = "0.15.0"

[profile.dev]
opt-level = 1
debug = "full"

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.common]
opt-level = 1

[profile.dev.package.hopdot]
opt-level = 1

[profile.dev.package.hopdot-server]
opt-level = 1

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
debug = true
lto = "thin"

[profile.relwithdebinfo]
inherits = "release"
debug = true

[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[patch.crates-io]
bevy = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_a11y = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_animation = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_asset = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_asset_macros = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_app = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_camera = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_color = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_core_pipeline = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_ecs = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_gltf = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_image = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_input = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_light = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_log = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_math = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_mesh = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_pbr = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_picking = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_platform = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_reflect = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_render = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_scene = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_sprite_render = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_state = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_shader = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_transform = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_ui = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_ui_render = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_utils = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_window = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
bevy_winit = { git = "https://github.com/LightningCreations/bevy", branch = "v0.17.2-patched" }
