[package]
name = "hopdot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "hopdot"

[dependencies]
bevy = { version = "0.16.1", features = ["experimental_pbr_pcss", "flac"] }
bevy_defer.workspace = true
bevy_prng = { version = "0.11.0", features = ["wyrand"] }
bevy_rand = "0.11.0"
bevy_skein = "0.2.1"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand.workspace = true
tracing = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
common.workspace = true

[features]
default = ["dev_native"]
dev = []
dev_native = []

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[lib]
crate-type = ["lib", "cdylib"]
