[package]
name = "hopdot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "hopdot"

[dependencies]
bevy = { workspace = true, default-features = true, features = [
    "experimental_pbr_pcss",
    "experimental_bevy_ui_widgets",
    "flac",
] }
bevy_defer.workspace = true
bevy_prng = { version = "0.13.0", features = ["wyrand"] }
bevy_rand = "0.13.0"
bevy_skein = { version = "0.5.0", default-features = false }
# bevy_skein = { version = "0.3.0" }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand.workspace = true
tracing = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
common.workspace = true
bevy-inspector-egui = { version = "0.36.0", optional = true }
async-channel = "2.5.0"
async-wsocket = "0.13.1"
bevy-tokio-tasks = "0.18.0"
serde = { workspace = true, features = ["derive"] }
bson = { version = "3.0.0", features = ["serde"] }
futures = "0.3.31"

[features]
# dev = ["bevy-inspector-egui"] # apparently egui just breaks a lot of things
dev = []

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[lib]
crate-type = ["lib", "cdylib"]

[package.metadata.bevy_cli.dev]
features = ["dev"]
