[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bincode = { version = "2.0.1", default-features = false, features = [
    "alloc",
    "derive",
    "serde",
] }
chrono = { version = "0.4.41", features = ["serde"] }
rand.workspace = true
uuid.workspace = true
serde.workspace = true
