[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ahash = "0.8.12"
bincode = { version = "2.0.1", default-features = false, features = [
    "alloc",
    "derive",
    "serde",
] }
bytemuck.workspace = true
chrono = { version = "0.4.41", features = ["serde"] }
rand.workspace = true
serde.workspace = true
uuid.workspace = true

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
