[package]
name = "hopdot-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
actix-ws = "0.3.0"
anyhow = "1.0.98"
env_logger = "0.11.8"
futures-util = "0.3.31"
jws = "0.2.9"
log = "0.4.27"
rusqlite = { version = "0.36.0", features = ["uuid", "time"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.41"
uuid = { version = "1.17.0", features = ["serde", "v7"] }
